--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,6 @@
-baseURL = 'http://example.org/'
+baseURL = 'https://leonghouheng.github.io/Logbook/'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
 theme = 'PaperMod'
 canonifyURLs = true
+relativeURLs = true
