--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,5 @@
-baseURL = 'https://leonghouheng.github.io/'
+baseURL = 'https://leonghouheng.github.io/Logbook/'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
 theme = 'PaperMod'
+canonifyurls = true
